Fix grid column issue on mobile

--- a/src/components/Store.css
+++ b/src/components/Store.css
@@ -393,7 +393,7 @@
         min-width: 120px;
         height: 80px;
     }
-
+    
     .product-gallery {
         grid-template-columns: repeat(2, 1fr);
         gap: 1rem;
@@ -447,7 +447,7 @@
     }
 
     .product-card h4 {
-        font-size: 1.1rem;
+        font-size: 1rem;
         margin-bottom: 0.5rem;
         min-height: 2.6rem;
         text-align: center;
@@ -470,7 +470,7 @@
         color: #EAEAEA;
         border: none;
         border-radius: 5px;
-        padding: 0.5rem 1rem;
+        padding: 0.5rem 0.7rem;
         width: 100%;
         font-weight: 300;
         cursor: pointer;
@@ -488,13 +488,13 @@
 }
 
 @media (max-width: 480px) {
-    .product-gallery {
+    /* .product-gallery {
         grid-template-columns: 1fr;
     }
 
     .collection-thumbnails {
         grid-template-columns: 1fr;
-    }
+    } */
 
     .tcg-tab {
         min-width: 100px;
